objects/Material_Usage_line_item__c/Material_Usage_line_item__c.object-meta.xml
<CustomObject>
    <description>This  Material Usage line item  object is child object of Material Item object</description>
    <label>Material Usage line item</label>
    <nameField>
        <displayFormat>MULI-{00000}</displayFormat>
        <label>MULI#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Usage line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>