objects/Material_Usage_line_item__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <label>Credit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>