objects/Material_Usage_line_item__c/fields/Debit__c.field-meta.xml
<CustomField>
    <fullName>Debit__c</fullName>
    <label>Debit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>