objects/Material_Usage_line_item__c/fields/Material_Item__c.field-meta.xml
<CustomField>
    <fullName>Material_Item__c</fullName>
    <label>Material Item</label>
    <referenceTo>Material_Item__c</referenceTo>
    <relationshipLabel>Material Usage line items</relationshipLabel>
    <relationshipName>Material_Usage_line_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>