objects/Material_Usage_line_item__c/fields/Production_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Production_Estimate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Estimate</label>
    <referenceTo>Production_Estimate__c</referenceTo>
    <relationshipLabel>Material Usage line items</relationshipLabel>
    <relationshipName>Material_Usage_line_items</relationshipName>
    <type>Lookup</type>
</CustomField>