objects/Material_Usage_line_item__c/fields/Qty_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Qty_On_Hand__c</fullName>
    <label>Qty On Hand</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>