objects/Material_Usage_line_item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
                <default>true</default>
                <label>Purchase</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>